deploy/traefik/ingress-controller/traefik-dashboard-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-route
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.dcp-k8s.cloudp.cc`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
